--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="video-container">
-            <video src="images/yongd.mp4" id="video" loop autoplay muted></video>
+            <video src="yongd.mp4" id="video" loop autoplay muted></video>
         </div>
 
     </section>
