--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
 
             <div class="image-container">
-                <img src="images/p1.jpg" alt="" class="image">
+                <img src="p1.jpg" alt="" class="image">
                 <div class="controls">
                     <span class="control-btn" data-src="images/about-1.jpg"></span>
                     <span class="control-btn" data-src="images/about-2.jpg"></span>
