--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/services-1.png" alt="">
+                <img src="services-1.png" alt="">
                 <h3>design</h3>
                 <p>Artificial intelligence and all design</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
-                <img src="images/services-2.png" alt="">
+                <img src="services-2.png" alt="">
                 <h3>automate</h3>
                 <p>Application, Documentaion all</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
-                <img src="images/services-3.png" alt="">
+                <img src="services-3.png" alt="">
                 <h3>Analyze</h3>
                 <p>Digital Optimization</p>
                 <a href="#" class="btn">read more</a>
@@ -130,7 +130,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p2.jpg" alt="">
+                    <img src="p2.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>Web Application</h3>
@@ -142,7 +142,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p3.jpg" alt="">
+                    <img src="p3.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>Android Application</h3>
@@ -154,7 +154,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p4.png" alt="">
+                    <img src="p4.png" alt="">
                 </div>
                 <div class="content">
                     <h3>Ios Application</h3>
@@ -166,7 +166,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p4.png" alt="">
+                    <img src="p4.png" alt="">
                 </div>
                 <div class="content">
                     <h3>Ecommerce</h3>
@@ -178,7 +178,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p6.jpg" alt="">
+                    <img src="p6.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>Business website</h3>
@@ -190,7 +190,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/p7.jpg" alt="">
+                    <img src="p7.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>Education</h3>
@@ -216,27 +216,27 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/g1.jpg" alt="">
+                <img src="g1.jpg" alt="">
             </div>
 
             <div class="box">
-                <img src="images/g2.jpg" alt="">
+                <img src="g2.jpg" alt="">
             </div>
 
             <div class="box">
-                <img src="images/g3.jpg" alt="">
+                <img src="g3.jpg" alt="">
             </div>
 
             <div class="box">
-                <img src="images/g4.jpg" alt="">
+                <img src="g4.jpg" alt="">
             </div>
 
             <div class="box">
-                <img src="images/p1.jpg" alt="">
+                <img src="p1.jpg" alt="">
             </div>
 
             <div class="box">
-                <img src="images/g6.jpg" alt="">
+                <img src="g6.jpg" alt="">
             </div>
 
         </div>
@@ -279,7 +279,7 @@
                     <div class="slide active">
                         <img src="images/quote-img.png" alt="" class="quote">
                         <p>This is my Best Company for my Development!</p>
-                        <img src="images/picb.jpg" alt="" class="images">
+                        <img src="picb.jpg" alt="" class="images">
                         <h3>krish</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -293,7 +293,7 @@
                     <div class="slide">
                         <img src="images/quote-img.png" alt="" class="quote">
                         <p>This is my Best Company for my Development!</p>
-                        <img src="images/pic-2.png" alt="" class="images">
+                        <img src="pic-2.png" alt="" class="images">
                         <h3>Nuwan</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -307,7 +307,7 @@
                     <div class="slide">
                         <img src="images/quote-img.png" alt="" class="quote">
                         <p>This is my Best Company for my Development!</p>
-                        <img src="images/pic-3.png" alt="" class="images">
+                        <img src="pic-3.png" alt="" class="images">
                         <h3>Kumar</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -321,7 +321,7 @@
                     <div class="slide">
                         <img src="images/quote-img.png" alt="" class="quote">
                         <p>This is my Best Company for my Development!</p>
-                        <img src="images/pic-4.png" alt="" class="images">
+                        <img src="pic-4.png" alt="" class="images">
                         <h3>Ravi</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
