--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youngdev intern</title>
+    <title>YDI SOFT</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     
@@ -17,7 +17,7 @@
 
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="#" class="logo">youngdev intern</a>
+        <a href="#" class="logo">YDI SOFT</a>
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
@@ -73,7 +73,7 @@
             <div class="content">
                 <span>Welcome To Our Journey</span>
                 <h3>Embark On Unforgettable Journeys</h3>
-                <p>At YoungDev Interns, We're Committed To Fostering Talent And Offering Exceptional Learning Experiences.
+                <p>At YDI SOFT, We're Committed To Fostering Talent And Offering Exceptional Learning Experiences.
                    We Believe In Breaking Down Barriers To Entry By Providing Free, Remote Internship Opportunities That Empower Aspiring Developers To Kickstart Their Careers.
                 </p>
                 <a href="#" class="btn"> read more</a>    
